testsuite/poke.pkl/ass-diag-2.pk
/* { dg-do compile } */

defun foo = void:
  {
   10 = 20;  /* { dg-error "" } */
  }
